-
Bug
-
Resolution: Fixed
-
P2: Important
-
4.8.x, 5.9.1
-
None
-
Linux, but this is a documentation problem.
-
qtbase/dev: 047e0e5118584149d0c6b1840644d902cfe548ef, ac382bd9a (dev), 3efa7c427 (6.7), 4963de506 (6.6), b237e137a (tqtc/lts-6.5)
QDateTime takes dd and yyyy. It is confusing when the example format strings don't work because they use DD YYYY, and it is a silent error with the characters not getting substituted and can be easy to miss.
It is less clear how to fixup the qnamespace.qdoc problem.
\c{YYYY-MM-DDTHH:mm:ssTZD} (e.g., 1997-07-16T19:20:30+01:00)
Is this okay?
\c{yyyy-MM-ddTHH:mm:sst} (e.g., 1997-07-16T19:20:30UTC)
But isn't the cited ISO 8601 require it to be the +/-HH:mm format? I don't see a character to output that for in QDateTime.
- relates to
-
QTBUG-122228 Gaps in date-time format string support
-
- Open
-
-
QTBUG-36601 QDateTime::fromString is not able to parse spaced formats
-
- Open
-
For Gerrit Dashboard: QTBUG-62111 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
200671,4 | Docs: Fix day/year format in QDateTime | dev | qt/qtbase | Status: MERGED | +2 | 0 |
200672,2 | Docs: TZD how? | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |
539812,2 | Clean up and clarify Date's ParseString's comment | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
540924,2 | Clean up and clarify Date's ParseString's comment | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
541286,2 | Clean up and clarify Date's ParseString's comment | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
541470,2 | Clean up and clarify Date's ParseString's comment | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |